--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "llama-cpp-python>=0.3.14",
-    "tcod>=19.3.0",
-]
+dependencies = ["llama-cpp-python>=0.3.14", "tcod>=19.3.0"]
 
 [dependency-groups]
-dev = [
-    "ruff>=0.12.7",
-]
+dev = ["ruff>=0.12.7"]
+
+[build-system]
+requires = ["uv_build>=0.8.4,<0.9.0"]
+build-backend = "uv_build"
+
+[project.scripts]
+rlt2025 = "rlt2025.main:main"
