Remove unused dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["llama-cpp-python>=0.3.14", "tcod>=19.3.0"]
+dependencies = ["tcod>=19.3.0"]
 
 [dependency-groups]
 dev = ["ruff>=0.12.7"]
