--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = ["tcod>=19.3.0"]
 
 [dependency-groups]
-dev = ["ruff>=0.12.7"]
+dev = ["ruff>=0.12.7", "pytest>=8.4.1"]
 
 [build-system]
 requires = ["uv_build>=0.8.4,<0.9.0"]
